chore: tweaked swagger annotation on endpoints.
